Show Complete Solution and Error Page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,17 @@
 {% extends 'include/_layout.html' %}
 {% block body %}
-    <h1>Project Title</h1>
-    <h3>Arithmetic Operation on Handwritten Nepali Digits Recognized Using Neural Network</h3>
-    <h1>Abstract</h1>
-    <p>Characters recognition plays an important role in the modern world. It can solve more complex problems and make humans’ job easier. An example is handwritten character recognition. This project is all about the recognition of handwritten Nepali digits and perform arithmetic operation (Division, Multiplication, Addition, and Subtraction) as specified in the given handwritten Nepali digits string. The output of the expression is printed step by step in an image so that the user can compare their result to that of image. This project can motivate the children to learn arithmetic operation as they feel really excited getting the problems solved in digitized way. </p>
+    <div class="row">
+        <div class="col-md-3 col-md-offset-9">
+            <a href="{{ url_for('static', filename='downloads/miniProjectReport.pdf') }}" target="_blank"><input type="submit" value="Download Project Report" class="btn btn-lg btn-primary"></a>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <h1 class="page-header">Project Title</h1>
+        <h3 class="text-left text-capitalize">Arithmetic Operation on Handwritten Nepali Digits Recognized Using Neural Network</h3>
+    </div>
+    <div class="row">
+        <h1 class="page-header">Abstract</h1>
+        <p class="text-left">Characters recognition plays an important role in the modern world. It can solve more complex problems and make humans’ job easier. An example is handwritten character recognition. This project is all about the recognition of handwritten Nepali digits and perform arithmetic operation (Division, Multiplication, Addition, and Subtraction) as specified in the given handwritten Nepali digits string. The output of the expression is printed step by step in an image so that the user can compare their result to that of image. This project can motivate the children to learn arithmetic operation as they feel really excited getting the problems solved in digitized way. </p>
+    </div>
 {% endblock %}
