--- a/templates/include/_header.html
+++ b/templates/include/_header.html
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-inverse ">
+ <nav class="navbar navbar-inverse " style="background-color: #05186f">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,13 +7,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Nepal Digits Arithmetic</a>
+          <a class="navbar-brand" href="#">Nepal Digits Arithmetic</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
-              <li><a href="/help">Help</a> </li>
-            <li><a href="/about">About</a></li>
+            <li><a class="navbar-link" href="/"><strong>Home</strong></a></li>
+              <li><a class="navbar-link" href="/help">Help</a> </li>
+            <li><a class="navbar-link" href="/about">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
